[gd_scene load_steps=8 format=3 uid="uid://dh1d5f7t7x75j"]

[ext_resource type="Script" path="res://levels/main.gd" id="1_1h0i5"]
[ext_resource type="PackedScene" uid="uid://bklnjfc4quwkv" path="res://huds/player_ui.tscn" id="2_lssm6"]
[ext_resource type="PackedScene" uid="uid://dbx0cirw8qfio" path="res://huds/menu_ui.tscn" id="3_ls847"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4gp7v"]

[sub_resource type="Sky" id="Sky_lf32q"]
sky_material = SubResource("ProceduralSkyMaterial_4gp7v")

[sub_resource type="Environment" id="Environment_i63sv"]
background_mode = 2
sky = SubResource("Sky_lf32q")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j1hj4"]
albedo_color = Color(0.360784, 0.470588, 0.223529, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_1h0i5")

[node name="Player_UI" parent="." instance=ExtResource("2_lssm6")]
visible = false

[node name="Menu_UI" parent="." instance=ExtResource("3_ls847")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.415428, 0.661966, -0.623875, 0.366894, 0.749534, 0.550988, 0.832351, 0, -0.554249, -3.59318, 6.05092, -3.39523)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i63sv")

[node name="Players" type="Node3D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://characters/player.tscn")
spawn_path = NodePath("../Players")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_j1hj4")

[node name="Pillar1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -8)
use_collision = true
size = Vector3(1, 10, 1)

[node name="Pillar2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.3618, 5, -1.9674)
use_collision = true
size = Vector3(1, 10, 1)

[node name="Pillar3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98633, 5, 12.5988)
use_collision = true
size = Vector3(1, 10, 1)

[node name="Camera3d" type="Camera3D" parent="."]
transform = Transform3D(0.721507, -0.128901, 0.680303, 1.42419e-08, 0.982519, 0.186164, -0.692408, -0.134319, 0.708894, 3.1154, 5.47557, 12.6054)

[node name="SpawnPoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="0" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9702, 0, -6.44797)

[node name="1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.22163, 0, 8.43365)

[node name="2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.9072, 0, 8.57763)

[node name="3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.9042, 0, -7.3053)
